processed/gerrit/txt_full/43712.txt
Change:     43712
Subject:    LU-14093 llapi: remove ignored qualifier
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/43712
Change-Id:  I049166bbc586007cdecc93225d508693607ef04e
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Dominique Martinet
Created:    2021-05-15 22:38:28.000000000
Updated:    2021-06-14 16:43:59.000000000
Patch Set:  3
Insertions: +2
Deletions:  -2
Comments:   1 (0 unresolved)

--- Labels ---
  Code-Review: James Simmons: +1; Andreas Dilger: +1; Neil Brown: +1; Oleg Drokin: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, James Simmons, Neil Brown

--- Commit Message ---
LU-14093 llapi: remove ignored qualifier

Fixes the following warning on newer gcc with -Wextra:
.../include/lustre/lustreapi.h:1000:1: error: type qualifiers ignored on function return type [-Werror=ignored-qualifiers]
 1000 | const __u16 llapi_layout_string_flags(char *string);
      | ^~~~~

As the parameter is ignored, this should make no code difference

Test-parameters: trivial

Change-Id: I049166bbc586007cdecc93225d508693607ef04e
Signed-off-by: Dominique Martinet <asmadeus@codewreck.org>
Reviewed-on: https://review.whamcloud.com/43712
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Neil Brown <neilb@suse.de>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Dominique Martinet, 2021-05-15 22:38:28.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2021-05-15 22:39:12.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Lustre Gerrit Janitor, 2021-05-15 22:43:54.000000000) ---
Patch Set 1:

(1 comment)

centos7: Compile failed


 Job output URL: https://testing-archive.whamcloud.com/gerrit-janitor/15892/results.html

--- Message (Dominique Martinet, 2021-05-15 22:55:59.000000000) ---
Uploaded patch set 2.

--- Message (jenkins, 2021-05-15 22:56:00.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/20749/ : ABORTED

https://build.whamcloud.com/job/lustre-reviews/80815/ : ABORTED

--- Message (wc-checkpatch, 2021-05-15 22:59:43.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (Lustre Gerrit Janitor, 2021-05-15 23:01:54.000000000) ---
Patch Set 2:

Builds for x86_64 centos7,rhel8.3 successful
Job output URL: https://testing-archive.whamcloud.com/gerrit-janitor/15895/results.html

 Commencing initial testing: runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs

--- Message (Lustre Gerrit Janitor, 2021-05-15 23:09:42.000000000) ---
Patch Set 2:

Initial testing succeeded.

Succeeded:
- runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs 

(centos7)All results and logs: https://testing-archive.whamcloud.com/gerrit-janitor/15895/results.html
Commencing standard testing: 
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity3@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity-slow-106@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity-slow@zfs conf-sanity-slow-106@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs pjdfstest@ldiskfs+DNE pjdfstest@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single@ldiskfs+DNE replay-single@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-lnet@zfs sanity-pcc@ldiskfs+DNE sanity-pcc@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs

--- Message (Maloo, 2021-05-15 23:31:23.000000000) ---
Patch Set 2:

The following sessions will be run for build 80817 patch 2

Enforced:
- review-ldiskfs-dne on el8.3-x86_64/ldiskfs servers and clients

Maloo Test Queue: https://testing.whamcloud.com/test_queue?jobs=lustre-reviews&builds=80817&commit=Apply+Filter
Maloo Results: https://testing.whamcloud.com/test_sessions?jobs=lustre-reviews&builds=80817&start_date=2021-05-15#redirect

--- Message (jenkins, 2021-05-15 23:54:20.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/20751/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/80817/ : SUCCESS

--- Message (Lustre Gerrit Janitor, 2021-05-16 01:49:10.000000000) ---
Patch Set 2:

Testing has completed Successfully

Succeeded:
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity3@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity-slow-106@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity-slow@zfs conf-sanity-slow-106@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs pjdfstest@ldiskfs+DNE pjdfstest@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single@ldiskfs+DNE replay-single@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-lnet@zfs sanity-pcc@ldiskfs+DNE sanity-pcc@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs 

(centos7)All results and logs: https://testing-archive.whamcloud.com/gerrit-janitor/15895/results.html

--- Message (Maloo, 2021-05-16 05:56:53.000000000) ---
Patch Set 2: Verified+1

Passed enforced test review-ldiskfs-dne on CentOS 8.3/x86_64 uploaded by Onyx Autotest 2 from onyx-44vm1: https://testing.whamcloud.com/test_sessions/93a4c3c8-1ae8-4258-b4e4-20e6cb79179c ran 5 tests.

--- Message (Andreas Dilger, 2021-05-20 03:03:37.000000000) ---
Patch Set 2: Code-Review+1

--- Message (James Simmons, 2021-05-22 12:50:38.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Neil Brown, 2021-05-24 01:14:56.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Oleg Drokin, 2021-06-14 16:43:56.000000000) ---
Patch Set 2: Code-Review+2

--- Message (unknown, 2021-06-14 16:43:59.000000000) ---
Change has been successfully cherry-picked as 90ee0457c9fb1da939558186961f346c917d678f by Oleg Drokin
